8317723: C2: CountedLoopEndNodes are wrongly treated as Runtime Predicate